Archive2/4e/c8ce594b9cba62/main.cpp
class A{}; class B : private A{}; class C : public B { A* a; };